# solid-rs

./: Cargo.toml  README.md  shared_dependencies.md
src/: api.rs  language_parser.rs  lib.rs  llm.rs  llm_chain.rs  main.rs  solidity_generator.rs
